Mobile laurel fix, text shift.

--- a/css/kit.css
+++ b/css/kit.css
@@ -465,7 +465,7 @@ section.footer div#contact img{
 
    section.main div.synopsis p{
       position: relative;
-      left: 4em;
+      left: 1em;
    }
 
    section.main div.synopsis div.video iframe{
@@ -510,7 +510,7 @@ section.footer div#contact img{
 
    section.main div#artistbios p{
       position: relative;
-      left: 4em;
+      left: 1em;
    }
 
    section.main div#stills img{
@@ -541,7 +541,7 @@ section.footer div#contact img{
       bottom: 0px;
       left: 0px;
       width: 100%;
-      height: 220px;
+      height: 120px;
    }
 
    section.footer div#contact h1{
@@ -579,9 +579,9 @@ section.footer div#contact img{
    section.footer div.container div#social div.laurels img{
       display: block;
       position: relative;
-      left: -2em;
+      left: 2em;
       bottom: 0em;
-      width: 5%;
-      height: 10%;
+      width: 30px;
+      height: 20px;
    }
 }
